@@ -22,9 +22,11 @@ package blue.settings;
 import blue.services.render.DiskRenderServiceFactory;
 import blue.ui.utilities.FileChooserManager;
 import blue.ui.utilities.SimpleDocumentListener;
+import java.awt.Desktop;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import javax.swing.DefaultComboBoxModel;
 import javax.swing.JFileChooser;
@@ -585,13 +587,15 @@ final class DiskRenderSettingsPanel extends javax.swing.JPanel {
         File manualDir = InstalledFileLocator.getDefault().
                 locate("csoundManual", "csound-manual", false);
         
-        String url = "file://" + manualDir.getAbsolutePath() + "/CommandFlags.html";
-        
-        url = url.replace(" ", "%20");
+        File index = new File(manualDir, "CommandFlags.html");
         
         try {
-            URLDisplayer.getDefault().showURL(new URL(url));
-        } catch (MalformedURLException ex) {
+            if (Desktop.isDesktopSupported()) {
+                Desktop.getDesktop().browse(index.toURI());
+            } else {
+                URLDisplayer.getDefault().showURL(index.toURL());
+            }
+        } catch (Exception ex) {
             Exceptions.printStackTrace(ex);
         }
     }//GEN-LAST:event_jButton2ActionPerformed
